# Starkle

./: .config.json.bak  .gitattributes  .gitignore  README.md  app.go  config.go  go.mod  go.sum  helper.go  main.go  wails.json
chaincore/contract/: verify.sol
chaincore/core/: instance.go
chaincore/rpc/: failover.go
frontend/src/components/: PopUp.jsx
frontend/src/components/cards/: certificate.tsx
frontend/src/components/modal/: proof.tsx
frontend/src/scenes/auth/: register.jsx
frontend/src/scenes/global/: Sidebar.jsx  Topbar.jsx
frontend/src/scenes/issue/: issue.tsx
frontend/src/scenes/transactions/: approved.jsx
frontend/src/styles/: styles.tsx
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/crypto/keyUtils/: encryptKeys.go
internal/crypto/zkp/: .gitignore  Cargo.toml  helpers.go  merkle.go  merkle_benchmark_test.go  merkle_results.txt  merkle_test.go  models.go
internal/crypto/zkp/host/: Cargo.toml  build.rs
internal/crypto/zkp/host/src/: main.rs
internal/crypto/zkp/methods/: Cargo.toml
internal/crypto/zkp/methods/guest/: Cargo.toml
internal/crypto/zkp/proto/: prover.proto
internal/crypto/zkp/rpc/: caller.go  go.mod  main.go  proof_test.go  (+1 more)
internal/download/: download.go  download_test.go
internal/ingest/: ingest.go  manual_selector.go  paralle_scanner.go  parallel_scanner.go  reader_test.go
internal/ingest/testDir/: 1.json  2.json  3.json  4.json  skip.txt
internal/models/: models.go
internal/utils/: utils.go
storage/models/: models.go
test/: approve_test.go  deploy_test.go
(+13 files in other folders)
