[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Heart of the Project
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.5", features = ["cuda"] }

# The gRPC/Protobuf "Truce" (Correctly Aligned Versions)
# We use 0.11/0.12 here to match the internal Risc0 requirements
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }

# Data & Hashing
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging (The "Hacker UI" Foundation)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
# These MUST match your [dependencies] or you get the family-feud errors
tonic-build = "0.10"
prost-build = "0.12" 

# This tells Risc0 which guest code to compile during that 2-minute wait
[package.metadata.risc0]
methods = ["guest"]