[package]
name = "zk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Note: No 'std' feature here!
risc0-zkvm = { version = "^3.0.5", default-features = false } 
# Crucial: default-features = false for serde
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }